tests/snapshots/markdown_comment_popup_snapshot__comment_popup_draft_cursor.snap
---
source: tests/markdown_comment_popup_snapshot.rs
expression: snapshot
---
00| 󰲡 Title                                                |
01|  ╭ Comment line 1 ──────────────────────────────────╮  |
02|Bo│hi█                                               │  |
03|  ╰──────────────────────────────────────────────────╯  |
04|                                                        |
05|                                                        |
06|                                                        |
07|                                                        |
08|                                                        |
09|                                                        |
