tests/snapshots/markdown_comment_popup_snapshot__comment_popup_reopens_saved_comment.snap
---
source: tests/markdown_comment_popup_snapshot.rs
expression: popup_snapshot
---
00| 󰲡 Title                                               ●|
01|  ╭ Comment line 1 ──────────────────────────────────╮  |
02|Bo│saved comment█                                    │  |
03|  ╰──────────────────────────────────────────────────╯  |
04|                                                        |
05|                                                        |
06|                                                        |
07|                                                        |
08|                                                        |
09|                                                        |
